Sun Aug  8 13:59:49 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* remote.c: Add comments about 'd', 'r', and unrecognized requests.

	* inflow.c (terminal_init_inferior): Don't muck with tty state if
	gdb_has_a_terminal() is false.

Sun Aug  8 10:07:47 1993  Fred Fish  (fnf@cygnus.com)

	* dwarfread.c (record_minimal_symbol):  Remove prototype and
	function.
	* dwarfread.c (add_partial_symbol):  Remove code to add minimal
	symbols and remove comment about limitations.  Experiments show
	that now that gdb handles the ELF symtab better for creating
	minimal symbols, that no additional information is added by
	examining the DWARF information, and in fact, given the
	limitations, the DWARF code was actually making things worse.

Sat Aug  7 10:59:03 1993  Fred Fish  (fnf@deneb.cygnus.com)

	* elfread.c (elf_symtab_read):  Properly sort out the bss symbols
	from the data symbols and give them the correct minimal_symbol_type.
	Add file static symbols to the minimal symbol table, not just
	global symbols.  Add absolute symbols as well (like _edata, _end).
	Redo stabs-in-elf special symbol handling now that file static
	symbols are entered into the into the minimal symbol table.
	* dwarfread.c (add_partial_symbol):  Add comment about limitations
	of DWARF symbols for distinquishing data from bss when adding
	minimal symbols.  Add file local symbols to minimal symbols.

Thu Aug  5 08:58:58 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* ser-go32.c: Define job_control variable.

Thu Aug  5 15:56:13 1993  david d `zoo' zuhn  (zoo@rtl.cygnus.com)

	* configure.in: z8k-coff is the same as z8k-sim

Thu Aug  5 08:58:58 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* 29k-share/udi/udip2soc.c: Include sys/types.h before sys/file.h.

	* config/i386/tm-i386bsd.h (NUM_REGS):  There are only 10, not 11.

	* inflow.c: Put all uses of F_GETFL and F_SETFL in #ifdef F_GETFL.

	* 29k-share/udi/udip2soc.c: Include fcntl.h not sys/fcntl.h.
